--- a/src/main/resources/lang/english.lang
+++ b/src/main/resources/lang/english.lang
@@ -9,13 +9,13 @@ none: <none>
 # -- Skript --
 skript:
 	copyright: ~ created by & © Peter Güttinger aka Njol ~
-	prefix: <gray>[<gold>Skript<gray>] # not used
+	prefix: <gray>[<gold>Skript<gray>] <reset>
 	quotes error: Invalid use of quotes ("). If you want to use quotes in "quoted text", double them: "".
 	brackets error: Invalid amount or placement of brackets. Please make sure that each opening bracket has a corresponding closing bracket.
 	invalid reload: Skript may only be reloaded by either Bukkit's '/reload' or Skript's '/skript reload' command.
 	no scripts: No scripts were found, maybe you should write some ;)
 	no errors: All scripts loaded without errors.
-	scripts loaded: Loaded %s script¦¦s¦ with a total of %s trigger¦¦s¦ and %s command¦¦s¦ in %s
+	scripts loaded: Loaded %s script¦¦s¦ with a total of %s structure¦¦s¦ in %s
 	finished loading: Finished loading.
 
 # -- Skript command --
@@ -25,7 +25,7 @@ skript command:
 		description: Skript's main command
 		help: Prints this help message. Use '/skript reload/enable/disable/update' to get more info
 		reload:
-			description: Reloads the config, all scripts, everything, or a specific script
+			description: Reloads a specific script, all scripts, the config, or everything
 			all: Reloads the config, all aliases configs and all scripts
 			config: Reloads the main config
 			aliases: Reloads the aliases configs (aliases-english.zip or plugin jar)
@@ -40,13 +40,13 @@ skript command:
 			all: Disables all scripts
 			<script>: Disables a specific script or a folder of scripts
 		update:
-			description: Check for updates, read the changelog, or download the latest version of Skript-1.8
+			description: Check for updates, read the changelog, or download the latest version of Skript
 			check: Checks for a new version
 			changes: Lists all changes since the current version
 			download: Download the newest version
 		info: Prints a message with links to Skript's aliases and documentation
-		gen-docs: Generates documentation using doc-templates in plugin folder
-		test: Used for running Skript tests
+		gen-docs: Generates documentation using docs/templates in plugin folder
+		test: Used for running internal Skript tests
 
 	invalid script: Can't find the script <grey>'<gold>%s<grey>'<red> in the scripts folder!
 	invalid folder: Can't find the folder <grey>'<gold>%s<grey>'<red> in the scripts folder!
@@ -68,38 +68,38 @@ skript command:
 		aliases: the aliases
 		script: <gold>%s<reset>
 		scripts in folder: all scripts in <gold>%s<reset>
-		x scripts in folder: <gold>%2$s <reset>script¦¦s¦ in <gold>%1$s<reset>
+		x scripts in folder: <gold>%2$s <lime>script¦¦s¦ in <gold>%1$s<reset>
 		empty folder: <gold>%s<reset> does not contain any enabled scripts.
 	enable:
 		all:
 			enabling: Enabling all disabled scripts...
 			enabled: Successfully enabled & parsed all previously disabled scripts.
-			error: Encountered %s error¦¦s¦ while parsing disabled scripts!
-			io error: Could not load any scripts (some scripts might have been renamed already and will be enabled when the server restarts): %s
+			error: <light red>Encountered <gold>%s <light red>error¦¦s¦ while parsing disabled scripts!
+			io error: <light red>Could not load one or more scripts - some scripts might have been renamed already and will be enabled when the server restarts: <gold>%s
 		single:
 			already enabled: <gold>%s<reset> is already enabled! Use <gray>/<gold>skript <cyan>reload <red>%s<reset> to reload it if it was changed.
 			enabling: Enabling <gold>%s<reset>...
 			enabled: Successfully enabled & parsed <gold>%s<reset>.
-			error: Encountered %2$s error¦¦s¦ while parsing <gold>%1$s<red>!
-			io error: Could not enable <gold>%s<red>: %s
+			error: <light red>Encountered <gold>%2$s <light red>error¦¦s¦ while parsing <gold>%1$s<light red>!
+			io error: <light red>Could not enable <gold>%s<light red>: <gold>%s
 		folder:
 			empty: <gold>%s<reset> does not contain any disabled scripts.
 			enabling: Enabling <gold>%2$s <reset>script¦¦s¦ in <gold>%1$s<reset>...
 			enabled: Successfully enabled & parsed <gold>%2$s<reset> previously disabled scripts in <gold>%1$s<reset>.
-			error: Encountered %2$s error¦¦s¦ while parsing scripts in <gold>%1$s<red>!
-			io error: Error while enabling scripts in <gold>%s<red> (some scripts might get enabled when the server restarts): %s
+			error: <light red>Encountered <gold>%2$s <light red>error¦¦s¦ while parsing scripts in <gold>%1$s<light red>!
+			io error: <light red>Error while enabling one or more scripts in <gold>%s <light red>(some scripts might get enabled when the server restarts): <gold>%s
 	disable:
 		all:
 			disabled: Successfully disabled all scripts.
-			io error: Could not rename all scripts - some scripts will be enabled again when you restart the server: %s
+			io error: <light red>Could not rename one or more scripts - some scripts might have been renamed already and will be disabled when the server restarts: <gold>%s
 		single:
 			already disabled: <gold>%s<reset> is already disabled!
 			disabled: Successfully disabled <gold>%s<reset>.
-			io error: Could not rename <gold>%s<red>, it will be enabled again when you restart the server: %s
+			io error: <light red>Could not rename <gold>%s<light red>, it will be enabled again when you restart the server: <gold>%s
 		folder:
-			empty: <gold>%s<reset> does not contain any enabled scripts,
+			empty: <gold>%s<reset> does not contain any enabled scripts.
 			disabled: Successfully disabled <gold>%2$s<reset> script(s) in <gold>%1$s<reset>.
-			io error: Could not disable any script in <gold>%s<red> (some scripts might get disabled when the server restarts): %s
+			io error: <light red>Could not disable one or more scripts in <gold>%s <light red>(some scripts might get disabled when the server restarts): <gold>%s
 	update:
 		# check/download: see Updater
 		changes:
@@ -121,20 +121,20 @@ skript command:
 # -- Updater --
 updater:
 	not started: Skript has not yet checked for the latest version. Use <gold>/skript update check<reset> to do so.
-	checking: Checking for the latest version of Skript-1.8...
+	checking: Checking for the latest version of Skript...
 	check in progress: Checking for a new version is currently in progress.
-	updater disabled: The updater is disabled, so a check for the latest version of Skript-1.8 was not performed.
-	check error: <red>There was an error checking for the latest version of Skript-1.8:<light red> %s
-	running latest version: You're currently running the latest stable version of Skript-1.8.
-	running latest version (beta): You're currently running a <i>beta<r> version of Skript-1.8, and no new <i>stable<r> version is available. Please note that you have to update to newer beta versions manually!
-	update available: A new version of Skript-1.8 is available: <gold>%s<reset> (you're currently running <gold>%s<reset>)
-	downloading: Downloading Skript-1.8 <gold>%s<reset>...
-	download in progress: The latest version of Skript-1.8 is currently being downloaded.
-	download error: <red>There was an error downloading the latest version of Skript-1.8:<light red> %s
-	downloaded: The latest version of Skript-1.8 has been downloaded! Restart the server or use /reload to apply the changes.
-	internal error: An internal error occurred while checking for the latest version of Skript-1.8. Please refer to the server log for details.
-	custom version: You're currently running a custom Skript-1.8 version. No updates will be automatically installed.
-	nightly build: You're currently running a development build of Skript-1.8. No updates will be automatically installed.
+	updater disabled: The updater is disabled, so a check for the latest version of Skript was not performed.
+	check error: <red>There was an error checking for the latest version of Skript:<light red> %s
+	running latest version: You're currently running the latest stable version of Skript.
+	running latest version (beta): You're currently running a <i>beta<r> version of Skript, and no new <i>stable<r> version is available. Please note that you have to update to newer beta versions manually!
+	update available: A new version of Skript is available: <gold>%s<reset> (you're currently running <gold>%s<reset>)
+	downloading: Downloading Skript <gold>%s<reset>...
+	download in progress: The latest version of Skript is currently being downloaded.
+	download error: <red>There was an error downloading the latest version of Skript:<light red> %s
+	downloaded: The latest version of Skript has been downloaded! Restart the server or use /reload to apply the changes.
+	internal error: An internal error occurred while checking for the latest version of Skript. Please refer to the server log for details.
+	custom version: You're currently running a custom Skript version. No updates will be automatically installed.
+	nightly build: You're currently running a development build of Skript. No updates will be automatically installed.
 
 # -- Commands --
 commands:
