--- a/src/main/resources/lang/german.lang
+++ b/src/main/resources/lang/german.lang
@@ -9,13 +9,13 @@ none: <none>
 # -- Skript --
 skript:
 	copyright: ~ erstellt von & © Peter Güttinger alias Njol ~
-	prefix: <gray>[<gold>Skript<gray>]
+	prefix: <gray>[<gold>Skript<gray>] <reset>
 	quotes error: Unerlaubte Verwendung von Anführungszeichen ("). Wenn du solche in "Text mit Anführungszeichen" einfügen willst, verdopple sie: "".
 	brackets error: Ungültige Anzahl/Anordnung von Klammern. Bitte sorge dafür, dass auf jede öffnende Klammer eine Schliessende folgt.
 	invalid reload: Skript darf nur mittles Bukkits '/reload' oder Skripts '/skript reload' neu geladen werden.
 	no scripts: Keine Skripte wurden gefunden, vielleicht solltest du einige schreiben ;)
 	no errors: Alle Skripte wurden fehlerfrei geladen.
-	scripts loaded: %s Skript¦¦e¦ mit insgesamt %s Trigger¦¦n¦ und %s Befehl¦¦en¦ wurden in %s geladen
+	scripts loaded: Es wurden %s Scripte geladen, von denen %s Strukturen sind innerhalb von %s
 	finished loading: Laden abgeschlossen.
 
 # -- Skript command --
@@ -41,13 +41,13 @@ skript command:
 			<script>: Deaktiviert ein bestimmtes Skript oder einen Ordner
 		update:
 			description: Überprüft auf eine neue Version, listet Änderungen dieser auf, und kann sie auch gleich herunterladen
-			check: Überprüft, ob eine neue Version von Skript-1.8 verfügbar ist
+			check: Überprüft, ob eine neue Version von Skript verfügbar ist
 			changes: Listet alle Änderungen seit der aktuellen Version auf (auf englisch)
 			download: Lädt die neueste Version herunter
 		info: Druckt eine Nachricht mit Links zu den Aliases und der Dokumentation von Skript.
-		gen-docs: Generiert Dokumentation mithilfe von doc-templates im Plugin-Ordner
+		gen-docs: Generiert Dokumentation mithilfe von docs/templates im Plugin-Ordner
 		test: Wird zum Ausführen von Skript-Tests verwendet
-	
+
 	invalid script: Das Skript <grey>'<gold>%s<grey>'<red> konnte nicht gefunden werden.
 	invalid folder: Der Ordner <grey>'<gold>%s<grey>'<red> konnte nicht gefunden werden.
 	reload:
@@ -61,45 +61,45 @@ skript command:
 		error details: <light red>    %s<reset>\n
 		other details: <white>    %s<reset>\n
 		line details: <gold>    Linie: <gray>%s<reset>\n <reset>
-		
+
 		config, aliases and scripts: die Konfiguration, alle Itemnamen und alle Skripte
 		scripts: alle Skripte
 		main config: Konfiguration
 		aliases: die Itemnamen
 		script: <gold>%s<reset>
 		scripts in folder: alle Skripte in <gold>%s<reset>
-		x scripts in folder: <gold>%2$s <reset>Skript¦¦e¦ in <gold>%1$s<reset>
+		x scripts in folder: <gold>%2$s <lime>Skript¦¦e¦ in <gold>%1$s<reset>
 		empty folder: <gold>%s<reset> enthält keine aktivierten Skripte.
 	enable:
 		all:
 			enabling: Aktiviere alle deaktivierten Skripte...
 			enabled: Alle Skripte wurden erfolgreich geladen & geparst.
-			error: %s Fehler ¦ist¦sind¦ aufgetreten beim Laden aller Skripte!
-			io error: Konnte keine Skripte laden (einige Skripte könnten bereits umbenannt worden sein und werden beim nächsten Serverneustart geladen): %s
+			error: <gold>%s <light red>Fehler ¦ist¦sind¦ aufgetreten beim Laden aller Skripte!
+			io error: <light red>Konnte keine Skripte laden (einige Skripte könnten bereits umbenannt worden sein und werden beim nächsten Serverneustart geladen): <gold>%s
 		single:
 			already enabled: <gold>%s<reset> ist bereits aktiviert! Verwende <gray>/<gold>skript <cyan>reload <red>%s<reset> um es erneut zu laden.
 			enabling: Aktiviere <gold>%s<reset>...
 			enabled: <gold>%s<reset> wurde erfolgreich aktiviert & geparst.
-			error: %2$s Fehler ¦ist¦sind¦ aufgetreten beim Laden von <gold>%1$s<red>!
-			io error: Konnte <gold>%s<red> nicht aktivieren: %s
+			error: <gold>%2$s <light red>Fehler ¦ist¦sind¦ aufgetreten beim Laden von <gold>%1$s<light red>!
+			io error: <light red>Konnte <gold>%s <light red>nicht aktivieren: <gold>%s
 		folder:
 			empty: <gold>%s<reset> enthält keine deaktivierten Skripte.
 			enabling: Aktiviere <gold>%2$s <reset>Skript¦¦e¦ in <gold>%1$s<reset>...
 			enabled: <gold>%2$s <reset>Skript¦¦e¦ aus <gold>%1$s<reset> wurden erfolgreich aktiviert.
-			error: %2$s Fehler ¦ist¦sind¦ aufgetreten beim Aktivieren der Skripte in <gold>%1$s<red>!
-			io error: Fehler beim Aktivieren der Skripte in <gold>%s<red> (einige Skripte werden eventuell beim nächsten Serverneustart aktiviert): %s
+			error: <gold>%2$s <light red>Fehler ¦ist¦sind¦ aufgetreten beim Aktivieren der Skripte in <gold>%1$s<light red>!
+			io error: <light red>Fehler beim Aktivieren der Skripte in <gold>%s <light red>(einige Skripte werden eventuell beim nächsten Serverneustart aktiviert): <gold>%s
 	disable:
 		all:
 			disabled: Alle Skripte wurden erfolgreich deaktiviert.
-			io error: Konnte nicht alle Skripte umbennenen - einige Skripte werden beim nächsten Serverneustart wieder aktiviert: %s
+			io error: <light red>Konnte nicht alle Skripte umbennenen - einige Skripte werden beim nächsten Serverneustart wieder aktiviert: <gold>%s
 		single:
 			already disabled: <gold>%s<reset> ist bereits deaktiviert!
 			disabled: <gold>%s<reset> wurde erfolgreich deaktiviert.
-			io error: Konnte <gold>%s<red> nicht umbennenen, es wird beim nächsten Serverneustart wieder aktiviert sein: %s
+			io error: <light red>Konnte <gold>%s <light red>nicht umbennenen, es wird beim nächsten Serverneustart wieder aktiviert sein: <gold>%s
 		folder:
 			empty: <gold>%s<reset> enthält keine aktivierten Skripte.
 			disabled: <gold>%2$s <reset>Skript¦¦e¦ aus <gold>%1$s<reset> wurden erfolgreich deaktiviert.
-			io error: Konnte keine Skripte in <gold>%s<red> deaktivieren (einige Skripte werden beim nächten Neustart evtl. deaktiviert): %s
+			io error: <light red>Konnte keine Skripte in <gold>%s <light red>deaktivieren (einige Skripte werden beim nächten Neustart evtl. deaktiviert): <gold>%s
 	update:
 		# check/download: see Updater
 		changes:
@@ -123,18 +123,18 @@ updater:
 	not started: Es wurde noch nicht geprüft, ob eine neue Version verfügbar ist. Benutze <gold>/skript update check<reset> um die Überprüfung zu starten.
 	checking: Es wird geprüft, ob eine neue Version verfügbar ist...
 	check in progress: Es wird gerade geprüft, ob eine neue Version verfügbar ist.
-	updater disabled: Die Überprüfung für weitere Skript-1.8 Versionen ist deaktiviert. Demnach konnte keine neue Skript-1.8 Version gefunden werden.
+	updater disabled: Die Überprüfung für weitere Skript Versionen ist deaktiviert. Demnach konnte keine neue Skript Version gefunden werden.
 	check error: <red>Beim Prüfen auf eine neue Version ist ein Fehler aufgetreten:<light red> %s
-	running latest version: Auf diesem Server läuft die neueste Version von Skript-1.8.
-	running latest version (beta): Auf diesem Server läuft eine <i>Beta<r>-Version von Skript-1.8, und es is keine neue <i>stabile<r> Version verfügbar. Auf neuere Beta-Versionen muss manuell aktualisiert werden!
-	update available: Eine neue Version von Skript-1.8 ist verfügbar: <gold>%s<reset> (Auf diesem Server läuft Version <gold>%s<reset>)
-	downloading: Lade Skript-1.8 <gold>%s<reset> herunter...
+	running latest version: Auf diesem Server läuft die neueste Version von Skript.
+	running latest version (beta): Auf diesem Server läuft eine <i>Beta<r>-Version von Skript, und es is keine neue <i>stabile<r> Version verfügbar. Auf neuere Beta-Versionen muss manuell aktualisiert werden!
+	update available: Eine neue Version von Skript ist verfügbar: <gold>%s<reset> (Auf diesem Server läuft Version <gold>%s<reset>)
+	downloading: Lade Skript <gold>%s<reset> herunter...
 	download in progress: Die neueste Version wird gerade heruntergeladen.
 	download error: <red>Beim Herunterladen der neuesten Version ist ein Fehler aufgetreten:<light red> %s
-	downloaded: Die neueste Version von Skript-1.8 wurde heruntergeladen! Starte den Server neu oder benutze /reload um die Änderungen zu übernehmen.
+	downloaded: Die neueste Version von Skript wurde heruntergeladen! Starte den Server neu oder benutze /reload um die Änderungen zu übernehmen.
 	internal error: Während der Überprüfung auf eine neue Version ist ein interner Fehler aufgetreten. Im Server-Log finden sich weitere Informationen.
-	custom version: Du besitzt eine inoffizielle Version von Skript-1.8. Demnach konnte nach keinem Update gesucht werden.
-	nightly build: You're currently running a development build of Skript-1.8. No updates will be automatically installed.
+	custom version: Du besitzt eine inoffizielle Version von Skript. Demnach konnte nach keinem Update gesucht werden.
+	nightly build: You're currently running a development build of Skript. No updates will be automatically installed.
 
 # -- Commands --
 commands:
