--- a/src/main/resources/lang/korean.lang
+++ b/src/main/resources/lang/korean.lang
@@ -9,13 +9,13 @@ none: <none>
 # -- Skript --
 skript:
 	copyright: ~ created by & © Peter Güttinger aka Njol ~
-	prefix: <gray>[<gold>Skript<gray>] # not used
+	prefix: <gray>[<gold>Skript<gray>] <reset>
 	quotes error: 따옴표(")가 잘못되었습니다. 인용문 텍스트에서 따옴표를 사용하려면 따옴표를 두 개 입력해야 합니다.
 	brackets error: 대괄호의 양 또는 위치가 잘못되었습니다. 각 여는 대괄호에 닫는 대괄호가 입력되어있는지 확인하십시오.
 	invalid reload: Skript는 Bukkit의 '/reload' 또는 스크립트의 '/skript reload' 로만 다시 로드할 수 있습니다.
 	no scripts: 스크립트를 찾을 수 없습니다. 일부 스크립트를 작성해야 합니다 ;)
 	no errors: 모든 스크립트가 오류없이 로드되었습니다.
-	scripts loaded: %s개의 스크립트 중 총 %s개의 트리거, %s개의 명령어를 %s 만에 로드했습니다.
+	scripts loaded: %s개의 스크립트에서 총 %s개의 구조를 %s 만에 로드했습니다.
 	finished loading: 로딩을 완료했습니다.
 
 # -- Skript command --
@@ -47,7 +47,7 @@ skript command:
 		info: Skript의 별명 및 문서에 대한 링크가있는 메시지를 표시합니다
 		gen-docs: 플러그인 폴더의 문서 템플릿을 사용하여 문서를 생성합니다.
 		test: Skript 테스트를 실행할 때 사용됩니다.
-		
+
 	invalid script: 스크립트 폴더에서 <grey>'<gold>%s<grey>'<red> 스크립트를 찾을 수 없습니다!
 	invalid folder: 스크립트 폴더에서 <grey>'<gold>%s<grey>'<red> 폴더를 찾을 수 없습니다!
 	reload:
@@ -68,38 +68,38 @@ skript command:
 		aliases: 별칭(aliases)
 		script: <gold>%s<reset>
 		scripts in folder: <gold>%s<reset>폴더 속 모든 스크립트
-		x scripts in folder: <gold>%1$s<reset> 폴더 속 <gold>%2$s<reset>개의 스크립트
+		x scripts in folder: <gold>%1$s<lime> 폴더 속 <gold>%2$s<reset>개의 스크립트
 		empty folder: <gold>%s<reset>에 활성화된 스크립트가 없습니다.
 	enable:
 		all:
 			enabling: 비활성화된 모든 스크립트를 활성화하는 중...
 			enabled: 비활성화된 모든 스크립트를 성공적으로 활성화하고 구문을 분석했습니다.
-			error: 비활성화된 스크립트의 구문을 분석하는 동안 %s개의 오류를 발견했습니다!
-			io error: 스크립트를 로드할 수 없습니다 (일부 스크립트의 이름이 변경되어 서버가 다시 시작될 때 활성화됩니다): %s
+			error: <light red>비활성화된 스크립트의 구문을 분석하는 동안 %s개의 오류를 발견했습니다!
+			io error: <light red>스크립트를 로드할 수 없습니다 (일부 스크립트의 이름이 변경되어 서버가 다시 시작될 때 활성화됩니다): <gold>%s
 		single:
 			already enabled: <gold> %s<reset>이(가) 이미 활성화되었습니다! 파일이 변경된 경우 <gray>/<gold>skript<cyan> reload <red>%s<reset>을(를) 사용하여 다시 로드하십시오.
 			enabling: <gold>%s<reset>을(를) 활성화하는 중...
 			enabled: <gold>%s<reset>을(를) 활성화하고 구문을 분석했습니다.
-			error: <gold>%1$s<red>의 구문을 분석하는 동안 %2$s개의 오류를 발견했습니다!
-			io error: <gold>%s<red>을(를) 활성화 할 수 없습니다: %s
+			error: <gold>%1$s<light red>의 구문을 분석하는 동안 <gold>%2$s<light red>개의 오류를 발견했습니다!
+			io error: <gold>%s<light red>을(를) 활성화 할 수 없습니다: <gold>%s
 		folder:
 			empty: <gold>%s<reset>에 비활성화된 스크립트가 없습니다.
 			enabling: <gold>%1$s<reset>에서 <gold>%2$s<reset>개의 스크립트를 활성화하는 중...
 			enabled: <gold>%1$s<reset>에서 비활성화된 <gold>%2$s<reset>개의 스크립트를 성공적으로 활성화하고 구문을 분석했습니다.
-			error: <gold>%1$s<red>의 스크립트의 구문을 분석하는 동안 %2$s개의 오류를 발견했습니다!
-			io error: <gold>%s<red>의 스크립트를 활성화하는 동안 오류가 발생했습니다 (서버가 다시 시작될 때 일부 스크립트가 활성화될 수 있습니다): %s
+			error: <gold>%1$s<light red>의 스크립트의 구문을 분석하는 동안 <gold>%2$s<light red>개의 오류를 발견했습니다!
+			io error: <gold>%s<light red>의 스크립트를 활성화하는 동안 오류가 발생했습니다 (서버가 다시 시작될 때 일부 스크립트가 활성화될 수 있습니다): <gold>%s
 	disable:
 		all:
 			disabled: 모든 스크립트를 성공적으로 비활성화했습니다.
-			io error: 모든 스크립트를 비활성화 할 수 없습니다 (서버를 다시 시작할 때 일부 스크립트가 다시 활성화될 수 있습니다): %s
+			io error: <light red>모든 스크립트를 비활성화 할 수 없습니다 (서버를 다시 시작할 때 일부 스크립트가 다시 활성화될 수 있습니다): <gold>%s
 		single:
 			already disabled: <gold>%s<reset>은(는) 이미 비활성화되었습니다!
 			disabled: <gold>%s<reset>을(를) 비활성화했습니다.
-			io error: <gold>%s<red>의 이름을 바꿀 수 없습니다 (서버를 다시 시작할 때 다시 활성화됩니다): %s
+			io error: <gold>%s<light red>의 이름을 바꿀 수 없습니다 (서버를 다시 시작할 때 다시 활성화됩니다): <gold>%s
 		folder:
 			empty: <gold>%s<reset>에 활성화된 스크립트가 없습니다.
 			disabled: <gold>%1$s<reset>에서 <gold>%2$s<reset>개의 스크립트를 성공적으로 비활성화했습니다.
-			io error: <gold>%s<red>의 스크립트를 비활성화 할 수 없습니다 (서버가 다시 시작될 때 일부 스크립트가 비활성화될 수 있음): %s
+			io error: <gold>%s<light red>의 스크립트를 비활성화 할 수 없습니다 (서버가 다시 시작될 때 일부 스크립트가 비활성화될 수 있음): <gold>%s
 	update:
 		# check/download: Updater 확인
 		changes:
@@ -121,20 +121,20 @@ skript command:
 # -- Updater --
 updater:
 	not started: Skript는 아직 최신 버전을 확인하지 않았습니다. <gold>/skript update check <reset>를 사용해 최신 버전을 확인하십시오.
-	checking: Skript-1.8의 최신 버전 확인 중...
+	checking: Skript의 최신 버전 확인 중...
 	check in progress: 현재 새 버전을 확인하고 있습니다.
-	updater disabled: 업데이터가 비활성화되어 있어 Skript-1.8의 최신 버전을 확인하지 않았습니다.
+	updater disabled: 업데이터가 비활성화되어 있어 Skript의 최신 버전을 확인하지 않았습니다.
 	check error: <red>Skript의 최신 버전을 확인하는 동안 오류가 발생했습니다: <light red>%s
-	running latest version: 현재 안정적인 최신 Skript-1.8 버전을 실행하고 있습니다.
-	running latest version (beta): 현재 <i>베타<r> 버전의 Skript-1.8을 실행하고 있으며 새로운 <i>안정<r> 버전이 없습니다. 최신 베타 버전으로 수동으로 업데이트해야합니다.
-	update available: Skript-1.8의 새로운 버전을 사용할 수 있습니다: <gold>%s<reset> (현재 <gold>%s<reset>을(를) 실행 중입니다)
-	downloading: Skript-1.8 <gold>%s<reset> 을(를) 다운로드하는 중...
-	download in progress: 현재 Skript-1.8의 최신 버전을 다운로드 중입니다.
-	download error: <red>Skript-1.8의 최신 버전을 다운로드하는 중에 오류가 발생했습니다: <light red>%s
+	running latest version: 현재 안정적인 최신 Skript 버전을 실행하고 있습니다.
+	running latest version (beta): 현재 <i>베타<r> 버전의 Skript을 실행하고 있으며 새로운 <i>안정<r> 버전이 없습니다. 최신 베타 버전으로 수동으로 업데이트해야합니다.
+	update available: Skript의 새로운 버전을 사용할 수 있습니다: <gold>%s<reset> (현재 <gold>%s<reset>을(를) 실행 중입니다)
+	downloading: Skript <gold>%s<reset> 을(를) 다운로드하는 중...
+	download in progress: 현재 Skript의 최신 버전을 다운로드 중입니다.
+	download error: <red>Skript의 최신 버전을 다운로드하는 중에 오류가 발생했습니다: <light red>%s
 	downloaded: Skript의 최신 버전이 다운로드되었습니다! 서버를 다시 시작하거나 '/reload' 를 사용하여 변경 사항을 적용하십시오.
-	internal error: <red>Skript-1.8의 최신 버전을 확인하는 중에 내부 오류가 발생했습니다. 자세한 내용은 서버 로그를 참조하십시오.
-	custom version: 현재 변경된 Skript-1.8 버전을 실행하고 있습니다. 업데이트가 자동으로 설치되지 않습니다.
-	nightly build: 현재 개발 버전의 Skript-1.8를 실행하고 있습니다. 업데이트가 자동으로 설치되지 않습니다.
+	internal error: <red>Skript의 최신 버전을 확인하는 중에 내부 오류가 발생했습니다. 자세한 내용은 서버 로그를 참조하십시오.
+	custom version: 현재 변경된 Skript 버전을 실행하고 있습니다. 업데이트가 자동으로 설치되지 않습니다.
+	nightly build: 현재 개발 버전의 Skript를 실행하고 있습니다. 업데이트가 자동으로 설치되지 않습니다.
 
 # -- Commands --
 commands:
